<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.nicole.mathquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/layout_margin"
            card_view:cardCornerRadius="@dimen/cardCorner">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/linear_layout_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/size" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/paddingBottomText"
                    android:paddingTop="@dimen/paddingTopText"
                    android:text="@string/types"
                    android:textSize="@dimen/textSizeHome" />

                <CheckBox
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addition" />

                <CheckBox
                    android:id="@+id/subtract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtraction" />

                <CheckBox
                    android:id="@+id/multiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/times" />

                <CheckBox
                    android:id="@+id/divide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/divide" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/paddingBottomText"
                    android:paddingTop="@dimen/paddingTopText"
                    android:text="@string/level"
                    android:textSize="@dimen/textSizeHome" />


                <RadioGroup
                    android:id="@+id/levels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"

                    >

                    <RadioButton
                        android:id="@+id/easy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/easy"
                        android:textSize="@dimen/textSize" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/paddingTop"
                        android:text="@string/medium"
                        android:textSize="@dimen/textSize" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/paddingTop"
                        android:text="@string/hard"
                        android:textSize="@dimen/textSize" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/start_quiz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/marginBottom"
            android:background="@color/button"
            android:onClick="startQuiz"
            android:paddingLeft="@dimen/buttonPadLeft"
            android:paddingRight="@dimen/buttonPadRight"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>

