<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/layout_margin"
            card_view:cardCornerRadius="@dimen/cardCorner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="24dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/numAsked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/numbers" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/of" />

                    <TextView
                        android:id="@+id/numQuestions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalNum" />
                </LinearLayout>

                <TextView
                    android:id="@+id/question_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="2"
                    android:textSize="@dimen/problemText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/math_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight=".40"
                        android:text="X"
                        android:textAlignment="textEnd"
                        android:textSize="@dimen/problemText" />

                    <TextView
                        android:id="@+id/question_bottom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight=".40"
                        android:text="2"
                        android:textAlignment="textEnd"
                        android:textSize="@dimen/problemText"

                        />

                </LinearLayout>

                <View
                    android:layout_width="200dp"
                    android:layout_height="5dp"
                    android:layout_gravity="right"
                    android:background="#000000" />

                <EditText
                    android:id="@+id/get_answer"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:inputType="number"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/problemText" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/submit_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/button"
            android:onClick="submitAnswer"
            android:text="@string/Submit" />


    </LinearLayout>
</ScrollView>