<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".Score">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/layout_margin"
            card_view:cardCornerRadius="@dimen/cardCorner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/greatMarginTop"
                    android:text="@string/ending"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/ending"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/youMarginTop"
                    android:text="@string/score"
                    android:textSize="@dimen/textView" />


                <TextView
                    android:id="@+id/numCorrect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="1"
                    android:textSize="@dimen/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=" out of "
                    android:textSize="@dimen/textView" />

                <TextView
                    android:id="@+id/numAsked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="10"
                    android:textSize="@dimen/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Correct!"
                    android:textSize="@dimen/textView" />


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/marginBottom"
            android:background="@color/button"
            android:onClick="restartQuiz"
            android:paddingLeft="@dimen/buttonPadLeft"
            android:paddingRight="@dimen/buttonPadRight"
            android:text="@string/restart_button" />

    </LinearLayout>
</ScrollView>